src/main/java/grammar/SimpleDraftGParser.java
// Generated from C:/Users/pro/IdeaProjects/ExperimentGrammar/src/main/java\SimpleDraftG.g4 by ANTLR 4.8
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleDraftGParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, VARIDENT=3, PRINTLN=4, PRINT=5, COMMENTSIGN=6, NONMUTABLE=7, 
		ADD=8, MINUS=9, DIV=10, MUL=11, THEN=12, LESSTHAN=13, MORETHAN=14, EQUALS=15, 
		DOUBLEDOTKEYWORDFORLOOP=16, DOKEYWORDFORLOOP=17, ARRIDENT=18, ARRNUMIDENT=19, 
		ARRSTRIDENT=20, STRINGIDENT=21, NUMIDENT=22, STRINGCHARACTER=23, FORIDENT=24, 
		IF=25, ENDSTATEMENT=26, STARTBRACKET=27, ENDBRACKET=28, ID=29, INT=30, 
		SINGLESPACE=31, EQUALSIGN=32, NEWLINE2=33, WS=34, SPACE=35, ARRSTART=36, 
		ARREND=37, COMMA=38;
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_block = 2, RULE_sysfunc = 3, RULE_assignment = 4, 
		RULE_forloop = 5, RULE_ifstat = 6, RULE_expr = 7, RULE_conditon = 8, RULE_arrvalue = 9, 
		RULE_comment = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stat", "block", "sysfunc", "assignment", "forloop", "ifstat", 
			"expr", "conditon", "arrvalue", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'var'", "'println'", "'print'", "'#'", "':'", "'+'", 
			"'-'", "'/'", "'*'", "'then'", "'<'", "'>'", "'=='", "'..'", "'do'", 
			"'arr'", "'arrnum'", "'arrstr'", "'str'", "'num'", "'\"'", "'for'", "'if'", 
			"';'", "'{'", "'}'", null, null, null, "'='", null, null, null, "'['", 
			"']'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "VARIDENT", "PRINTLN", "PRINT", "COMMENTSIGN", "NONMUTABLE", 
			"ADD", "MINUS", "DIV", "MUL", "THEN", "LESSTHAN", "MORETHAN", "EQUALS", 
			"DOUBLEDOTKEYWORDFORLOOP", "DOKEYWORDFORLOOP", "ARRIDENT", "ARRNUMIDENT", 
			"ARRSTRIDENT", "STRINGIDENT", "NUMIDENT", "STRINGCHARACTER", "FORIDENT", 
			"IF", "ENDSTATEMENT", "STARTBRACKET", "ENDBRACKET", "ID", "INT", "SINGLESPACE", 
			"EQUALSIGN", "NEWLINE2", "WS", "SPACE", "ARRSTART", "ARREND", "COMMA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleDraftG.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpleDraftGParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleDraftGVisitor ) return ((SimpleDraftGVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			stat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleDraftGVisitor ) return ((SimpleDraftGVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			setState(30);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARIDENT:
			case PRINTLN:
			case PRINT:
			case ARRIDENT:
			case STRINGIDENT:
			case NUMIDENT:
			case FORIDENT:
			case IF:
			case SINGLESPACE:
				enterOuterAlt(_localctx, 1);
				{
				setState(25); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(24);
					block();
					}
					}
					setState(27); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VARIDENT) | (1L << PRINTLN) | (1L << PRINT) | (1L << ARRIDENT) | (1L << STRINGIDENT) | (1L << NUMIDENT) | (1L << FORIDENT) | (1L << IF) | (1L << SINGLESPACE))) != 0) );
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public ForloopContext forloop() {
			return getRuleContext(ForloopContext.class,0);
		}
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public List<TerminalNode> SINGLESPACE() { return getTokens(SimpleDraftGParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(SimpleDraftGParser.SINGLESPACE, i);
		}
		public SysfuncContext sysfunc() {
			return getRuleContext(SysfuncContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleDraftGVisitor ) return ((SimpleDraftGVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		try {
			int _alt;
			setState(41);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FORIDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(32);
				forloop();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(33);
				ifstat();
				}
				break;
			case VARIDENT:
			case ARRIDENT:
			case STRINGIDENT:
			case NUMIDENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(34);
				assignment();
				}
				break;
			case SINGLESPACE:
				enterOuterAlt(_localctx, 4);
				{
				setState(36); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(35);
						match(SINGLESPACE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(38); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case PRINTLN:
			case PRINT:
				enterOuterAlt(_localctx, 5);
				{
				setState(40);
				sysfunc();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SysfuncContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(SimpleDraftGParser.PRINT, 0); }
		public List<TerminalNode> STRINGCHARACTER() { return getTokens(SimpleDraftGParser.STRINGCHARACTER); }
		public TerminalNode STRINGCHARACTER(int i) {
			return getToken(SimpleDraftGParser.STRINGCHARACTER, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ENDSTATEMENT() { return getToken(SimpleDraftGParser.ENDSTATEMENT, 0); }
		public TerminalNode PRINTLN() { return getToken(SimpleDraftGParser.PRINTLN, 0); }
		public SysfuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sysfunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).enterSysfunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).exitSysfunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleDraftGVisitor ) return ((SimpleDraftGVisitor<? extends T>)visitor).visitSysfunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SysfuncContext sysfunc() throws RecognitionException {
		SysfuncContext _localctx = new SysfuncContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sysfunc);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PRINT:
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				match(PRINT);
				setState(44);
				match(T__0);
				setState(45);
				match(STRINGCHARACTER);
				setState(46);
				expr(0);
				setState(47);
				match(STRINGCHARACTER);
				setState(48);
				match(T__1);
				setState(49);
				match(ENDSTATEMENT);
				}
				break;
			case PRINTLN:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				match(PRINTLN);
				setState(52);
				match(T__0);
				setState(53);
				match(STRINGCHARACTER);
				setState(54);
				expr(0);
				setState(55);
				match(STRINGCHARACTER);
				setState(56);
				match(T__1);
				setState(57);
				match(ENDSTATEMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignObjArrayContext extends AssignmentContext {
		public TerminalNode ARRIDENT() { return getToken(SimpleDraftGParser.ARRIDENT, 0); }
		public List<TerminalNode> SINGLESPACE() { return getTokens(SimpleDraftGParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(SimpleDraftGParser.SINGLESPACE, i);
		}
		public TerminalNode ID() { return getToken(SimpleDraftGParser.ID, 0); }
		public TerminalNode EQUALSIGN() { return getToken(SimpleDraftGParser.EQUALSIGN, 0); }
		public TerminalNode ARRSTART() { return getToken(SimpleDraftGParser.ARRSTART, 0); }
		public TerminalNode ARREND() { return getToken(SimpleDraftGParser.ARREND, 0); }
		public List<ArrvalueContext> arrvalue() {
			return getRuleContexts(ArrvalueContext.class);
		}
		public ArrvalueContext arrvalue(int i) {
			return getRuleContext(ArrvalueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SimpleDraftGParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpleDraftGParser.COMMA, i);
		}
		public AssignObjArrayContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).enterAssignObjArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).exitAssignObjArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleDraftGVisitor ) return ((SimpleDraftGVisitor<? extends T>)visitor).visitAssignObjArray(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignVarDigitsContext extends AssignmentContext {
		public TerminalNode VARIDENT() { return getToken(SimpleDraftGParser.VARIDENT, 0); }
		public List<TerminalNode> SINGLESPACE() { return getTokens(SimpleDraftGParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(SimpleDraftGParser.SINGLESPACE, i);
		}
		public TerminalNode ID() { return getToken(SimpleDraftGParser.ID, 0); }
		public TerminalNode EQUALSIGN() { return getToken(SimpleDraftGParser.EQUALSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignVarDigitsContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).enterAssignVarDigits(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).exitAssignVarDigits(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleDraftGVisitor ) return ((SimpleDraftGVisitor<? extends T>)visitor).visitAssignVarDigits(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignStringContext extends AssignmentContext {
		public TerminalNode STRINGIDENT() { return getToken(SimpleDraftGParser.STRINGIDENT, 0); }
		public List<TerminalNode> SINGLESPACE() { return getTokens(SimpleDraftGParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(SimpleDraftGParser.SINGLESPACE, i);
		}
		public TerminalNode ID() { return getToken(SimpleDraftGParser.ID, 0); }
		public TerminalNode EQUALSIGN() { return getToken(SimpleDraftGParser.EQUALSIGN, 0); }
		public List<TerminalNode> STRINGCHARACTER() { return getTokens(SimpleDraftGParser.STRINGCHARACTER); }
		public TerminalNode STRINGCHARACTER(int i) {
			return getToken(SimpleDraftGParser.STRINGCHARACTER, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignStringContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).enterAssignString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).exitAssignString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleDraftGVisitor ) return ((SimpleDraftGVisitor<? extends T>)visitor).visitAssignString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignDigitsContext extends AssignmentContext {
		public TerminalNode NUMIDENT() { return getToken(SimpleDraftGParser.NUMIDENT, 0); }
		public List<TerminalNode> SINGLESPACE() { return getTokens(SimpleDraftGParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(SimpleDraftGParser.SINGLESPACE, i);
		}
		public TerminalNode ID() { return getToken(SimpleDraftGParser.ID, 0); }
		public TerminalNode EQUALSIGN() { return getToken(SimpleDraftGParser.EQUALSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignDigitsContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).enterAssignDigits(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).exitAssignDigits(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleDraftGVisitor ) return ((SimpleDraftGVisitor<? extends T>)visitor).visitAssignDigits(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignVarStringContext extends AssignmentContext {
		public TerminalNode VARIDENT() { return getToken(SimpleDraftGParser.VARIDENT, 0); }
		public List<TerminalNode> SINGLESPACE() { return getTokens(SimpleDraftGParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(SimpleDraftGParser.SINGLESPACE, i);
		}
		public TerminalNode ID() { return getToken(SimpleDraftGParser.ID, 0); }
		public TerminalNode EQUALSIGN() { return getToken(SimpleDraftGParser.EQUALSIGN, 0); }
		public List<TerminalNode> STRINGCHARACTER() { return getTokens(SimpleDraftGParser.STRINGCHARACTER); }
		public TerminalNode STRINGCHARACTER(int i) {
			return getToken(SimpleDraftGParser.STRINGCHARACTER, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignVarStringContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).enterAssignVarString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).exitAssignVarString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleDraftGVisitor ) return ((SimpleDraftGVisitor<? extends T>)visitor).visitAssignVarString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		int _la;
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				_localctx = new AssignStringContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(STRINGIDENT);
				setState(62);
				match(SINGLESPACE);
				setState(63);
				match(ID);
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SINGLESPACE) {
					{
					setState(64);
					match(SINGLESPACE);
					}
				}

				setState(67);
				match(EQUALSIGN);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SINGLESPACE) {
					{
					setState(68);
					match(SINGLESPACE);
					}
				}

				setState(71);
				match(STRINGCHARACTER);
				setState(72);
				expr(0);
				setState(73);
				match(STRINGCHARACTER);
				}
				break;
			case 2:
				_localctx = new AssignDigitsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(NUMIDENT);
				setState(76);
				match(SINGLESPACE);
				setState(77);
				match(ID);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SINGLESPACE) {
					{
					setState(78);
					match(SINGLESPACE);
					}
				}

				setState(81);
				match(EQUALSIGN);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SINGLESPACE) {
					{
					setState(82);
					match(SINGLESPACE);
					}
				}

				setState(85);
				expr(0);
				}
				break;
			case 3:
				_localctx = new AssignObjArrayContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				match(ARRIDENT);
				setState(87);
				match(SINGLESPACE);
				setState(88);
				match(ID);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SINGLESPACE) {
					{
					setState(89);
					match(SINGLESPACE);
					}
				}

				setState(92);
				match(EQUALSIGN);
				setState(93);
				match(ARRSTART);
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(98);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
					case 1:
						{
						setState(94);
						arrvalue();
						setState(95);
						match(COMMA);
						}
						break;
					case 2:
						{
						setState(97);
						arrvalue();
						}
						break;
					}
					}
					setState(100); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==STRINGCHARACTER || _la==INT );
				setState(102);
				match(ARREND);
				}
				break;
			case 4:
				_localctx = new AssignVarStringContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				match(VARIDENT);
				setState(105);
				match(SINGLESPACE);
				setState(106);
				match(ID);
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SINGLESPACE) {
					{
					setState(107);
					match(SINGLESPACE);
					}
				}

				setState(110);
				match(EQUALSIGN);
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SINGLESPACE) {
					{
					setState(111);
					match(SINGLESPACE);
					}
				}

				setState(114);
				match(STRINGCHARACTER);
				setState(115);
				expr(0);
				setState(116);
				match(STRINGCHARACTER);
				}
				break;
			case 5:
				_localctx = new AssignVarDigitsContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(118);
				match(VARIDENT);
				setState(119);
				match(SINGLESPACE);
				setState(120);
				match(ID);
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SINGLESPACE) {
					{
					setState(121);
					match(SINGLESPACE);
					}
				}

				setState(124);
				match(EQUALSIGN);
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SINGLESPACE) {
					{
					setState(125);
					match(SINGLESPACE);
					}
				}

				setState(128);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForloopContext extends ParserRuleContext {
		public TerminalNode FORIDENT() { return getToken(SimpleDraftGParser.FORIDENT, 0); }
		public List<TerminalNode> SINGLESPACE() { return getTokens(SimpleDraftGParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(SimpleDraftGParser.SINGLESPACE, i);
		}
		public List<TerminalNode> INT() { return getTokens(SimpleDraftGParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(SimpleDraftGParser.INT, i);
		}
		public TerminalNode DOUBLEDOTKEYWORDFORLOOP() { return getToken(SimpleDraftGParser.DOUBLEDOTKEYWORDFORLOOP, 0); }
		public TerminalNode DOKEYWORDFORLOOP() { return getToken(SimpleDraftGParser.DOKEYWORDFORLOOP, 0); }
		public TerminalNode STARTBRACKET() { return getToken(SimpleDraftGParser.STARTBRACKET, 0); }
		public TerminalNode ENDBRACKET() { return getToken(SimpleDraftGParser.ENDBRACKET, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ForloopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forloop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).enterForloop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleDraftGListener ) ((SimpleDraftGListener)listener).exitForloop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleDraftGVisitor ) return ((SimpleDraftGVisitor<? extends T>)visitor).visitForloop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForloopContext forloop() throws RecognitionException {
		ForloopContext _localctx = new ForloopContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_forloop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(FORIDENT);
			setState(132);
			match(SINGLESPACE);
			setState(133);
			match(INT);
			setState(134);
			match(DOUBLEDOTKEYWORDFORLOOP);
			setState(135);
			match(INT);
			setState(136);
			match(SINGLESPACE);
			setState(137);
			match(DOKEYWORDFORLOOP);
			setState(138);
			match(STARTBRACKET);
			setState(140); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(139);
				block();
				}
				}
				setState(142); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VARIDENT) | (1L << PRINTLN) | (1L << PRINT) | (1L << ARRIDENT) | (1L << STRINGIDENT) | (1L << NUMIDENT) | (1L << FORIDENT) | (1L << IF) | (1L << SINGLESPACE))) != 0) );
			setState(144);
			match(ENDBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
